Localization Upto Breeds

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -14,6 +14,7 @@
     }
   },
 
+  "onboard": "Onboard!",
   
   "onboardingScreen1Title": "Welcome to GauSampada!",
   "@onboardingScreen1Title": {
