--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -494,5 +494,41 @@
   "local_names": "Local Names",
   "description": "Description",
   "interested_in": "Interested in",
-  "contact_seller": "Contact Seller"
+  "contact_seller": "Contact Seller",
+
+  "removed_from_favorites": "Removed from Favorites",
+  "added_to_favorites": "Added to Favorites",
+
+  "select_language": "Select Language",
+  "apply_language": "Apply Language",
+
+  "editProfile": "Edit Profile",
+  "changePassword": "Change Password",
+  "settings": "Settings",
+  "changeLanguage": "Change Language",
+  "help": "Help",
+  "logoutConfirmation": "Are you sure you want to Log Out?",
+  "diseasePrediction": "Disease Prediction",
+  "noImageSelected": "No Image Selected",
+  "gallery": "Gallery",
+  "camera": "Camera",
+  "enterYourDetails": "Enter your details",
+  "analyzeImage": "Analyze image",
+  "aiAssistant": "AI Assistant",
+  "errorEncountered": "Sorry, I encountered an error",
+  "failedToGetResponse": "Failed to get response",
+  "askQuestion": "Ask a question or just say hello",
+  "assistantGreeting": "I'm here to help you!",
+  "cowBreedsInfo": "Feel free to ask about cows and their breeds.",
+  "askYourQuestions": "Ask Your Questions Here",
+  "failedToMakeCall": "Failed to make the call. Please try again.",
+  "permissionDenied": "Permission denied. Cannot make a call.",
+  "permissionPermanentlyDenied": "Permission permanently denied. Enable in settings.",
+  "describeSymptoms": "Describe symptoms or ask a specific question",
+  "analyzing": "Analyzing...",
+  "analysisReport": "Analysis Report",
+  "yourQuestion": "Your Question:",
+  "results": "Results:",
+  "recommendedDoctor": "Recommended Doctor",
+  "viewAll": "View All"
 }
