Complete Setup of Localization

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -530,5 +530,6 @@
   "yourQuestion": "Your Question:",
   "results": "Results:",
   "recommendedDoctor": "Recommended Doctor",
-  "viewAll": "View All"
+  "viewAll": "View All",
+  "india": "India"
 }
