--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -356,7 +356,8 @@
   "yourQuestion": "आपका प्रश्न:",
   "results": "परिणाम:",
   "recommendedDoctor": "सिफारिश किया गया डॉक्टर",
-  "viewAll": "सभी देखें"
+  "viewAll": "सभी देखें",
+  "india": "भारत"
 }
 
   
