--- a/lib/l10n/app_ta.arb
+++ b/lib/l10n/app_ta.arb
@@ -192,5 +192,6 @@
   "yourQuestion": "உங்கள் கேள்வி:",
   "results": "முடிவுகள்:",
   "recommendedDoctor": "பரிந்துரைக்கப்பட்ட மருத்துவர்",
-  "viewAll": "அனைத்தையும் காண்க"
+  "viewAll": "அனைத்தையும் காண்க",
+  "india": "இந்தியா"
 }
