--- a/lib/l10n/app_te.arb
+++ b/lib/l10n/app_te.arb
@@ -516,5 +516,6 @@
   "yourQuestion": "మీ ప్రశ్న:",
   "results": "ఫలితాలు:",
   "recommendedDoctor": "సిఫార్సు చేసిన డాక్టర్",
-  "viewAll": "అన్ని చూడండి"
+  "viewAll": "అన్ని చూడండి",
+  "india": "భారత్"
 }
