Changes in connect

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -532,8 +532,7 @@
   "recommendedDoctor": "Recommended Doctor",
   "viewAll": "View All",
   "india": "India",
+  "breadAIDescription":"Start a conversation about Indian cow breeds. You can send text or images of cows for identification.",
 
-
-
-  "breadAIDescription":"Start a conversation about Indian cow breeds. You can send text or images of cows for identification."
+  "farmVet": "FarmVet"
 }
