--- a/lib/l10n/app_te.arb
+++ b/lib/l10n/app_te.arb
@@ -517,5 +517,7 @@
   "results": "ఫలితాలు:",
   "recommendedDoctor": "సిఫార్సు చేసిన డాక్టర్",
   "viewAll": "అన్ని చూడండి",
-  "india": "భారత్"
+  "india": "భారత్",
+
+  "farmVet": "పశువైద్యం"
 }
