--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -534,5 +534,31 @@
   "india": "India",
   "breadAIDescription":"Start a conversation about Indian cow breeds. You can send text or images of cows for identification.",
 
-  "farmVet": "FarmVet"
+  "farmVet": "FarmVet",
+  "bookAppointment": "BookAppointment",
+  "doctorName":"Doctor Name",
+  "specialty": "Speciality",
+  "selectDate": "Select Date",
+  "selectTime": "Select Time",
+  "appointmentBooked": "Appointment Booked",
+  "confirm": "Confirm",
+  "connect": "Connect",
+  "searchDoctors": "Search Doctors",
+  "currentAppointments": "Current Appointments",
+  "previousAppointments": "Previous Appointments",
+  "noCurrentAppointments": "No Current Appointments",
+  "findDoctor": "Find Doctor",
+  "noPreviousAppointments": "No Previous Appointments",
+  "noAppointments": "No Appointments",
+  "noDoctorsFound": "No Doctors Found",
+  "available": "Available",
+  "unavailable": "Unavailable",
+  "appointmentDetails": "Appointment Details",
+  "appointmentReason": "Appointment Reason",
+  "additionalNotes": "Additional Notes",
+  "pleaseCompleteAllFields": "Please Complete All Fields",
+  "appointmentBookedWith": "Appointment Booked With",
+  "all": "All",
+  "pleaseLogin": "Please Login",
+  "selectReason": "Select Reason"
 }
