--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -218,7 +218,7 @@
   "@notifications": {
     "description": "Text for notifications"
   },
-  "breedInformation": "Breed Information",
+  "breedInformation": "Breed Info",
   "@breedInformation": {
     "description": "Text for breed information"
   },
