--- a/lib/l10n/app_ta.arb
+++ b/lib/l10n/app_ta.arb
@@ -193,5 +193,23 @@
   "results": "முடிவுகள்:",
   "recommendedDoctor": "பரிந்துரைக்கப்பட்ட மருத்துவர்",
   "viewAll": "அனைத்தையும் காண்க",
-  "india": "இந்தியா"
+  "india": "இந்தியா",
+
+  "ai_breed_information": "ஏஐ இன அறிவியல்",
+  "new_conversation": "புதிய உரையாடல்",
+  "thinking": "யோசிக்கின்றேன்...",
+  "welcome_message": "இந்திய மாடினம் நிபுணருக்கு வரவேற்கிறோம்",
+  "tell_about_ap_cows": "ஆந்திர பிரதேச மாடுகளை பற்றி கூறுங்கள்",
+  "identify_best_milking_breeds": "சிறந்த பாலைப்போக்கும் இனங்களை கண்டறியவும்",
+  "indigenous_cow_benefits": "உள்ளூர் மாடுகளின் நன்மைகள்",
+  "add_image": "படத்தை சேர்க்கவும்",
+  "ask_about_indian_cow_breeds": "இந்திய மாடினங்கள் பற்றிக் கேளுங்கள்...",
+  "add_cow_image": "மாடு படத்தை சேர்க்கவும்",
+  "choose_from_gallery": "கேலரியிலிருந்து தேர்வுசெய்க",
+  "take_a_photo": "ஒரு புகைப்படம் எடுக்கவும்",
+
+  "finance": "நிதி",
+  "insurance": "காப்பீடு",
+  "medicines": "மருந்துகள்",
+  "cattle_Feeds": "கால்நடை உணவுகள்"
 }
